--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <head>
 <title>Bryce Bohling</title>
 <style>
-
+  h1 {
+    color: red;
+  }
 </style>
 </head>
 <body>
-
 <header>
 This is the header
 </header>
 <h1>Hello World</h1>
-
-
-
 <footer>
 This is the footer.
 </footer>
