add more test code

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html>
 <head>
-<title>Bryce Bohling</title>
-<style>
-  h1 {
-    color: red;
-  }
-</style>
+  <title>Bryce Bohling</title>
+  <style>
+    h1 {
+      color: red;
+    }
+  </style>
 </head>
 <body>
-<header>
-This is the header
-</header>
-<h1>Hello World</h1>
-<footer>
-This is the footer.
-</footer>
+  <header>
+    This is the header
+  </header>
+  <h1>Hello World</h1>
+  <section>
+    This is come content
+  </section>
+  <footer>
+    This is the footer.
+  </footer>
 </body>
 </html>
