--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <h1>Hello World</h1>
   <section>
-    This is come content
+    This is some test content.
   </section>
   <footer>
     This is the footer.
