--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
-<html>
+<!doctype html>
+
+<html lang="en">
+
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Bryce Bohling</title>
+  <meta name="description" content="home of bryce bohling">
+  <meta name="author" content="Bryce Bohling">
+
+  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://brycebohling.com/">
+  <meta property="og:description" content="home of bryce bohling">
+  <meta property="og:image" content="image.png">
+
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
   <style>
-    h1 {
-      color: red;
+    body,
+    html {
+      height: 100%;
+      display: grid;
+      background-color: #708090;
+      color: rgb(210, 222, 234);
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 26px;
     }
+
+    main {
+      margin: auto;
+    }
+
   </style>
+
 </head>
+
 <body>
- 
+  <main>
+    <p>home of bryce bohling</p>
+  </main>
 </body>
+
 </html>
+
