--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="index.css">
+
 
   <title>Bryce Bohling</title>
   <meta name="description" content="home of bryce bohling">
@@ -20,29 +22,16 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <style>
-    body,
-    html {
-      height: 100%;
-      display: grid;
-      background-color: #708090;
-      color: rgb(210, 222, 234);
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-size: 28px;
-    }
-
-    main {
-      margin: auto;
-    }
-
-  </style>
-
 </head>
 
 <body>
   <main>
-    <p>home of bryce bohling</p>
-    <p>Hello world</p>
+    <h1>Home of Bryce Bohling</h1>
+    <h3>Games</h3>
+    <div class="container">
+
+    </div>
+    <a href="https://hs.brycebohling.com" target="_blank">Hack&Slash</a>
   </main>
 </body>
 
