added gem junction

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </div>
     <a href="https://hs.brycebohling.com" target="_blank">Hack&Slash</a>
     <br></br>
-    <a href="https://bulletblitz.brycebohling.com" target="_blank">BulletBlitz</a>
+    <a href="https://bulletblitz.brycebohling.com" target="_blank">Bullet Blitz</a>
+    <br></br>
+    <a href="https://gemjunction.brycebohling.com" target="_blank"><img src="Images/GemJunctionLogo.png" alt="Gem Junction" style="width: 960px; height: 540px;"></a>
     
   </main> 
 </body>
