--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 <body>
   <main>
     <h1>Home of Bryce Bohling</h1>
-    <h3>Games</h3>
-    <div class="container">
 
+    <div class="game-box">
+      <a href="https://hs.brycebohling.com" target="_blank"><img src="Images/H-S Image.png" class="center" alt="Gem Junction" style="width: 500px; height: 280px;"></a>
     </div>
-    <a href="https://hs.brycebohling.com" target="_blank">Hack&Slash</a>
-    <br></br>
-    <a href="https://bulletblitz.brycebohling.com" target="_blank">Bullet Blitz</a>
-    <br></br>
-    <a href="https://gemjunction.brycebohling.com" target="_blank"><img src="Images/GemJunctionLogo.png" alt="Gem Junction" style="width: 960px; height: 540px;"></a>
+    <br>
+    <div class="game-box">  
+      <a href="https://gemjunction.brycebohling.com" target="_blank"><img src="Images/GemJunctionLogo.png" class="center" alt="Gem Junction" style="width: 500px; height: 280px;"></a>
+    </div>
+    
     
   </main> 
 </body>
