added magnet mayhem

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div class="game-box">  
       <a href="https://gemjunction.brycebohling.com" target="_blank"><img src="Images/GemJunctionLogo.png" class="center" alt="Gem Junction" style="width: 500px; height: 280px;"></a>
     </div>
+    <br>
+    <div class="game-box">
+      <a href="https://mm.brycebohling.com" target="_blank"><img src="Images/MagnetMayhemImage.png" class="center" alt="Magent Mayhem" style="width: 500px; height: 280px;"></a>
+    </div>
     
     
   </main> 
