added jem junction coming soone

--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
   <main>
     <h1>Home of Bryce Bohling</h1>
 
-    <div class="game-box">
-      <a href="https://hs.brycebohling.com" target="_blank"><img src="Images/H-S Image.png" class="center" alt="Gem Junction" style="width: 500px; height: 280px;"></a>
+    <div>  
+      <a><img src="Images/jem-junction-logo.png" class="game-icon" alt="Jem Junction"></a>
+    </div>
+    <div class="center">  
+      <h3>Jem Junction coming soon to mobile!</h3>
     </div>
     <br>
-    <div class="game-box">  
-      <a href="https://gemjunction.brycebohling.com" target="_blank"><img src="Images/GemJunctionLogo.png" class="center" alt="Gem Junction" style="width: 500px; height: 280px;"></a>
+    <div class="game-box">
+      <a href="https://hs.brycebohling.com" target="_blank"><img src="Images/H-S Image.png" class="center" alt="Gem Junction" style="width: 500px; height: 280px;"></a>
     </div>
     <br>
     <div class="game-box">
