--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="game-box">
       <a href="https://mm.brycebohling.com" target="_blank"><img src="Images/MagnetMayhemImage.png" class="center" alt="Magent Mayhem" style="width: 500px; height: 280px;"></a>
     </div>
-    <a href="/downloads/PongV1.0.0.zip" download><button>🍎 Download pong for Mac</button></a>
+    <a href="/downloads/PongV1.0.0.zip" download><button>🍎 Download pong for Mac!</button></a>
     
     
   </main> 
