--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <a href="https://mm.brycebohling.com" target="_blank"><img src="Images/MagnetMayhemImage.png" class="center" alt="Magent Mayhem" style="width: 500px; height: 280px;"></a>
     </div>
     <a href="/downloads/PongV1.0.0.zip" download><button>🍎 Download pong for Mac!</button></a>
+    <a href="/downloads/PongWinV1.0.0.zip" download><button>🖥️ Download pong for Windows!</button></a>
     
     
   </main> 
